--- a/xcelium.d/run.lnx8664.19.09.d/xmsim.env
+++ b/xcelium.d/run.lnx8664.19.09.d/xmsim.env
@@ -7,5 +7,5 @@
 setenv XMRUNMODE "xrun:./xcelium.d/run.lnx8664.19.09.d"
 #<< :  <#3 FALSE>#>
 setenv XRUNBATCH "FALSE"
-#<< ;  <#5 config gen -seed=121>#> <#5 test>#>
-setenv SPECMAN_PRE_COMMANDS "config gen -seed=121;test"
+#<< ;  <#5 config gen -seed=n>#> <#5 test>#>
+setenv SPECMAN_PRE_COMMANDS "config gen -seed=n;test"
