--- a/component/Makefile
+++ b/component/Makefile
@@ -1,28 +1,28 @@
 CFLAGS= -Wall -fPIC -m64
 SHARED= -shared
-DIR=../c_code/
+DIR=../mode/
 FILE=uvm.shm  xcelium.d  xrun.history  xrun.log
-COM=xrun  -uvm +libtext_.v +xm64bit +xmtimescale+1ns/10ps +access+r -seed $(SEED) +xmlicq +sv -vlog_ext +.vh -disable_sem2009 \
+COM=xrun  -uvm +libtext_.v +xm64bit +xmtimescale+1ns/10ps +access+r -seed $(SEED1) +xmlicq +sv -vlog_ext +.vh -disable_sem2009 \
 	-F filelist.f  -y /edatools/xilinx/Vivado/2020.1/data/verilog/src/unisims +libext+.v \
 	-sv_lib libdpi.so\
-	-covoverwrite -coverage B -covdut imdct_fft_with_ram256
+	-covoverwrite -coverage B -covdut imdct_fft_with_ram256 -input ./uvm.cmd
 
-ifndef SEED
-	SEED:=defualt-size
+ifndef SEED1
+	SEED1:=defualt-size
 else
-	SEED:=$(SEED)
+	SEED1:=$(SEED1)
 endif
 
-ifndef SIZE
-	SIZE:=defualt-size
+ifndef SIZE1
+	SIZE1:=defualt-size
 else
-	SIZE:=$(SIZE)
+	SIZE1:=$(SIZE1)
 endif
 
-ifeq ($(SIZE),128)
+ifeq ($(SIZE1),128)
 	RUN:=$(COM) +define+SIZE0 -covtest test_cov_appo0
 else
-	ifeq ($(SIZE),1024)
+	ifeq ($(SIZE1),1024)
 		RUN:=$(COM) +define+SIZE1 -covtest test_cov_appo1
 	else		
 	endif
@@ -36,6 +36,6 @@ clean:
 	$(RM) -r $(FILE) *.txt* *.so* cov_work
 show:
 	echo $(wildcard ./src/*.c) 
-	echo $(SIZE)
-	echo $(SEED)
+	echo $(SIZE1)
+	echo $(SEED1)
 
